@@ -79,6 +79,7 @@ core 2.3.0 - not released yet
 	* Changed: Open duration picker closes on body click
 	* Changed: Adapted form.xsd
 	* Changed: Raise php memory limit when a mail is sent with attachments
+	* Changed: Tabs can now be disabled per item (return value false of label method removes the tab)
 	* Bugfix: Visual optimization of sortable-panel-list handle
 	* Bugfix: Fixed linux-chrome-styling-bug
 	* Bugfix: styling bug in sortable panel list
